tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-0e9fcfd852ab17b75"
                }
            ],
            "InternetGatewayId": "igw-0237f8e74c593d7e5",
            "OwnerId": "769993059587",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-IGW"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                }
            ]
        },
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-000a7e8b1ce43cb61"
                }
            ],
            "InternetGatewayId": "igw-09e35e6f007be6975",
            "OwnerId": "769993059587",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "stack",
                    "Value": "production"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "myInternetGateway"
                }
            ]
        },
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-091bac73ab8540fbc"
                }
            ],
            "InternetGatewayId": "igw-0a34f956c53884392",
            "OwnerId": "769993059587",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "internet-gateway"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "Igw"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/53a8d880-21be-11ec-a4cb-0e232268861f"
                }
            ]
        }
    ]
}
