tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-nat-gateways.json
{
    "NatGateways": [
        {
            "ConnectivityType": "public",
            "CreateTime": "2021-09-30T07:17:28+00:00",
            "NatGatewayAddresses": [
                {
                    "AllocationId": "eipalloc-088bb2f8166d84230",
                    "NetworkInterfaceId": "eni-0a99482d6b9db8f86",
                    "PrivateIp": "192.168.100.48",
                    "PublicIp": "34.230.120.155"
                }
            ],
            "NatGatewayId": "nat-0cb93fabe0cb575b6",
            "State": "available",
            "SubnetId": "subnet-0af5e22fc69b290a6",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PrivateSubnetNatGw"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/53a8d880-21be-11ec-a4cb-0e232268861f"
                },
                {
                    "Key": "Name",
                    "Value": "gw NAT"
                }
            ],
            "VpcId": "vpc-091bac73ab8540fbc"
        }
    ]
}
