tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-network-interfaces.json
{
    "NetworkInterfaces": [
        {
            "Association": {
                "AllocationId": "eipalloc-088bb2f8166d84230",
                "AssociationId": "eipassoc-0bb27c75d290847c3",
                "IpOwnerId": "769993059587",
                "PublicDnsName": "",
                "PublicIp": "34.230.120.155"
            },
            "Attachment": {
                "AttachmentId": "ela-attach-018f832392904971e",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1f",
            "Description": "Interface for NAT Gateway nat-0cb93fabe0cb575b6",
            "Groups": [],
            "InterfaceType": "nat_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "16:50:56:f9:79:4f",
            "NetworkInterfaceId": "eni-0a99482d6b9db8f86",
            "OwnerId": "769993059587",
            "PrivateIpAddress": "192.168.100.48",
            "PrivateIpAddresses": [
                {
                    "Association": {
                        "AllocationId": "eipalloc-088bb2f8166d84230",
                        "AssociationId": "eipassoc-0bb27c75d290847c3",
                        "IpOwnerId": "769993059587",
                        "PublicDnsName": "",
                        "PublicIp": "34.230.120.155"
                    },
                    "Primary": true,
                    "PrivateIpAddress": "192.168.100.48"
                }
            ],
            "RequesterId": "597517344698",
            "RequesterManaged": true,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-0af5e22fc69b290a6",
            "TagSet": [],
            "VpcId": "vpc-091bac73ab8540fbc"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-8510bab3",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1d",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-0eba27ce33772af80",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "0e:bf:f7:30:02:3f",
            "NetworkInterfaceId": "eni-01156ad96ac0afbee",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-109-249.ec2.internal",
            "PrivateIpAddress": "10.21.109.249",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-109-249.ec2.internal",
                    "PrivateIpAddress": "10.21.109.249"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-0f0665c6775ae109f",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-0dece1c68ee569186",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1d",
            "Description": "AWS Lambda VPC ENI-user_pre_register-dev-idan-bab84f8f-4188-415e-a24f-dfe4cfe07126",
            "Groups": [
                {
                    "GroupId": "sg-07bee36c0aa40a34c",
                    "GroupName": "Cloudrail-dev-idan-Lambda-Security-Group"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0e:f1:18:3d:ab:85",
            "NetworkInterfaceId": "eni-0ce655827279e8572",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-109-248.ec2.internal",
            "PrivateIpAddress": "10.21.109.248",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-109-248.ec2.internal",
                    "PrivateIpAddress": "10.21.109.248"
                }
            ],
            "RequesterId": "AROA3GRZJVUB22UU5HYS4:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-0f0665c6775ae109f",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-82c48a80",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1c",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-0eba27ce33772af80",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "0a:d3:6f:fb:39:ad",
            "NetworkInterfaceId": "eni-07ecdde3245e3074d",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-106-14.ec2.internal",
            "PrivateIpAddress": "10.21.106.14",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-106-14.ec2.internal",
                    "PrivateIpAddress": "10.21.106.14"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-062448d812f599972",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-0a0e3bde4f48cc722",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1c",
            "Description": "AWS Lambda VPC ENI-user_pre_register-dev-idan-46e31825-2155-4fee-bf39-746307e81657",
            "Groups": [
                {
                    "GroupId": "sg-07bee36c0aa40a34c",
                    "GroupName": "Cloudrail-dev-idan-Lambda-Security-Group"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0a:d0:b3:50:0f:ad",
            "NetworkInterfaceId": "eni-0d9dfa769a07b9e76",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-107-48.ec2.internal",
            "PrivateIpAddress": "10.21.107.48",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-107-48.ec2.internal",
                    "PrivateIpAddress": "10.21.107.48"
                }
            ],
            "RequesterId": "AROA3GRZJVUB22UU5HYS4:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-062448d812f599972",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-418a784d",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "Network Interface for Transit Gateway Attachment tgw-attach-0eba27ce33772af80",
            "Groups": [],
            "InterfaceType": "transit_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "12:14:e7:7c:f4:6b",
            "NetworkInterfaceId": "eni-01ded71958f8f4422",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-105-45.ec2.internal",
            "PrivateIpAddress": "10.21.105.45",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-105-45.ec2.internal",
                    "PrivateIpAddress": "10.21.105.45"
                }
            ],
            "RequesterId": "936118442230",
            "RequesterManaged": false,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-0a49ff61a4e99b94a",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-065e41079b4c0e8e5",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "AWS Lambda VPC ENI-user_pre_register-dev-idan-fbd2a019-f640-45cd-8335-c8a21ce8eeab",
            "Groups": [
                {
                    "GroupId": "sg-07bee36c0aa40a34c",
                    "GroupName": "Cloudrail-dev-idan-Lambda-Security-Group"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "12:d2:08:fd:a1:d3",
            "NetworkInterfaceId": "eni-0bee1fbec387bbf6e",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-105-103.ec2.internal",
            "PrivateIpAddress": "10.21.105.103",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-105-103.ec2.internal",
                    "PrivateIpAddress": "10.21.105.103"
                }
            ],
            "RequesterId": "AROA3GRZJVUB22UU5HYS4:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-0a49ff61a4e99b94a",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Association": {
                "AllocationId": "eipalloc-0e428478b0d71ae89",
                "AssociationId": "eipassoc-05922439d9177eac1",
                "IpOwnerId": "769993059587",
                "PublicDnsName": "ec2-3-231-101-146.compute-1.amazonaws.com",
                "PublicIp": "3.231.101.146"
            },
            "Attachment": {
                "AttachmentId": "ela-attach-04551e8370463e1e6",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "Interface for NAT Gateway nat-0cb93fabe0cb575b6",
            "Groups": [],
            "InterfaceType": "nat_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "12:91:92:f9:8e:d1",
            "NetworkInterfaceId": "eni-0cc147a416fe8d533",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-97-194.ec2.internal",
            "PrivateIpAddress": "10.21.97.194",
            "PrivateIpAddresses": [
                {
                    "Association": {
                        "AllocationId": "eipalloc-0e428478b0d71ae89",
                        "AssociationId": "eipassoc-05922439d9177eac1",
                        "IpOwnerId": "769993059587",
                        "PublicDnsName": "ec2-3-231-101-146.compute-1.amazonaws.com",
                        "PublicIp": "3.231.101.146"
                    },
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-97-194.ec2.internal",
                    "PrivateIpAddress": "10.21.97.194"
                }
            ],
            "RequesterId": "583328430953",
            "RequesterManaged": true,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-07aafe557fd3ec501",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AvailabilityZone": "us-east-1b",
            "Description": "RDSNetworkInterface",
            "Groups": [
                {
                    "GroupId": "sg-012a1c52fe21aee13",
                    "GroupName": "cloudrail-dev-idan-DB-SG"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "12:ee:45:fd:52:53",
            "NetworkInterfaceId": "eni-099ecb7d550d8e08e",
            "OwnerId": "769993059587",
            "PrivateDnsName": "ip-10-21-105-77.ec2.internal",
            "PrivateIpAddress": "10.21.105.77",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-105-77.ec2.internal",
                    "PrivateIpAddress": "10.21.105.77"
                }
            ],
            "RequesterId": "amazon-rds",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "available",
            "SubnetId": "subnet-0a49ff61a4e99b94a",
            "TagSet": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        }
    ]
}
