tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0344843cdeda34d08",
                    "RouteTableId": "rtb-0a8df726fae6d7ec3",
                    "SubnetId": "subnet-085df35eb16f98696"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0a8df726fae6d7ec3",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.16.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-09e35e6f007be6975",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "myRouteTable"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                }
            ],
            "VpcId": "vpc-000a7e8b1ce43cb61"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0aca1403fc6cb72e0",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-07aafe557fd3ec501"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0961cf49241334735",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-04c3273bc3fe3ea35"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0570325941c92b3d2",
                    "RouteTableId": "rtb-003a5f71f0e2c1e2b",
                    "SubnetId": "subnet-07af844489c3ba4ac"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-003a5f71f0e2c1e2b",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0237f8e74c593d7e5",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0c7b05b25617f24ea",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-RT"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-070adb215c01d66e0",
                    "RouteTableId": "rtb-0ddab37c173203d3c"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0ddab37c173203d3c",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Default-RT"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-031a4770d8eaa4853",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-0a49ff61a4e99b94a"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c40491b0db46d171",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-0f0665c6775ae109f"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c382bac63ef052ae",
                    "RouteTableId": "rtb-0063bc5b42a8004c2",
                    "SubnetId": "subnet-062448d812f599972"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0063bc5b42a8004c2",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.96.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.16.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "TransitGatewayId": "tgw-0bb1396f4b2cc782c"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0cb93fabe0cb575b6",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0c7b05b25617f24ea",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-RT"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-057d75a73af40aa67",
                    "RouteTableId": "rtb-03d238d0ccd0f0dfd",
                    "SubnetId": "subnet-0f9c1ebaec67287b4"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-03d238d0ccd0f0dfd",
            "Routes": [
                {
                    "DestinationCidrBlock": "192.168.100.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0cb93fabe0cb575b6",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "private-rtb"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PrivateRtb"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/53a8d880-21be-11ec-a4cb-0e232268861f"
                }
            ],
            "VpcId": "vpc-091bac73ab8540fbc"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-045bded7b2fddfc2a",
                    "RouteTableId": "rtb-0ec8245ad81671382"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0ec8245ad81671382",
            "Routes": [
                {
                    "DestinationCidrBlock": "192.168.100.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-091bac73ab8540fbc"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0026a01b08fa140a9",
                    "RouteTableId": "rtb-0ccb005bc3d33186f"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0ccb005bc3d33186f",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.16.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-000a7e8b1ce43cb61"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0899ff75b5de31d51",
                    "RouteTableId": "rtb-01296ad2ce0c5e874",
                    "SubnetId": "subnet-0af5e22fc69b290a6"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-01296ad2ce0c5e874",
            "Routes": [
                {
                    "DestinationCidrBlock": "192.168.100.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0a34f956c53884392",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/53a8d880-21be-11ec-a4cb-0e232268861f"
                },
                {
                    "Key": "Name",
                    "Value": "public-rtb"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PublicRtb"
                }
            ],
            "VpcId": "vpc-091bac73ab8540fbc"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-ab308bda",
                    "RouteTableId": "rtb-1df4bf63"
                }
            ],
            "OwnerId": "769993059587",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-1df4bf63",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-dba497a0",
                    "Origin": "CreateRoute",
                    "State": "blackhole"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-c678b4bb"
        }
    ]
}
