tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-vpc-endpoints.json
{
    "VpcEndpoints": [
        {
            "CreationTimestamp": "2021-05-06T08:59:04+00:00",
            "DnsEntries": [],
            "Groups": [],
            "NetworkInterfaceIds": [],
            "OwnerId": "769993059587",
            "PolicyDocument": "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}",
            "PrivateDnsEnabled": false,
            "RequesterManaged": false,
            "RouteTableIds": [
                "rtb-003a5f71f0e2c1e2b",
                "rtb-0063bc5b42a8004c2"
            ],
            "ServiceName": "com.amazonaws.us-east-1.s3",
            "State": "available",
            "SubnetIds": [],
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-S3-Endpoint"
                }
            ],
            "VpcEndpointId": "vpce-0c7b05b25617f24ea",
            "VpcEndpointType": "Gateway",
            "VpcId": "vpc-0e9fcfd852ab17b75"
        }
    ]
}
