tests/knowledge/context/aws/scenarios/cross_version/nat_gw/private-subnet-with-nat-gw/cfn-account-data/dev/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "192.168.100.0/24",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-04c85358a157918bc",
                    "CidrBlock": "192.168.100.0/24",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "769993059587",
            "State": "available",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/53a8d880-21be-11ec-a4cb-0e232268861f"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "Main"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                }
            ],
            "VpcId": "vpc-091bac73ab8540fbc"
        },
        {
            "CidrBlock": "10.21.96.0/20",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-043bcfc7d145de37d",
                    "CidrBlock": "10.21.96.0/20",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "769993059587",
            "State": "available",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-VPC"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "CidrBlock": "172.16.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0ce1137db2a475a64",
                    "CidrBlock": "172.16.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "769993059587",
            "State": "available",
            "Tags": [
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "myMainVpc"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                }
            ],
            "VpcId": "vpc-000a7e8b1ce43cb61"
        },
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-cd9840a2",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "769993059587",
            "State": "available",
            "VpcId": "vpc-c678b4bb"
        }
    ]
}
